[gd_scene load_steps=8 format=3 uid="uid://ca1a183620qj5"]

[ext_resource type="Script" uid="uid://b631dlgajk4de" path="res://shop/tradeMenu.gd" id="1_lkqge"]
[ext_resource type="Texture2D" uid="uid://d010jcospqex4" path="res://art/UI/Banners/Carved_9Slides.png" id="2_bvr5l"]
[ext_resource type="AudioStream" uid="uid://dogkvyqf0s34a" path="res://sound/SFX/04_sack_open_2.wav" id="3_bvr5l"]
[ext_resource type="Texture2D" uid="uid://nhuspb4j46tc" path="res://art/UI/Buttons/Button_Blue_3Slides.png" id="3_td31b"]
[ext_resource type="Texture2D" uid="uid://dgii26q667qtf" path="res://art/UI/Buttons/Button_Blue_3Slides_Pressed.png" id="4_2dbkq"]
[ext_resource type="Texture2D" uid="uid://cp7oapq7yws3d" path="res://art/Deco/G_Idle 64 X 64.png" id="6_ow1gs"]
[ext_resource type="Texture2D" uid="uid://parjab6ss210" path="res://art/Deco/W_Idle 64 X 64.png" id="7_bvr5l"]

[node name="TradeMenu" type="CanvasLayer"]
script = ExtResource("1_lkqge")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 289.0
offset_top = 46.0
offset_right = 289.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 130.0
offset_top = -340.0
offset_right = -576.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.85, 0.85)
texture = ExtResource("2_bvr5l")

[node name="Texto" type="Label" parent="Control/TextureRect2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = -213.0
offset_right = -112.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Hello Sir, How can I help you??"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bvr5l")

[node name="GoldButton" type="Button" parent="."]
offset_left = 478.0
offset_top = 480.0
offset_right = 666.0
offset_bottom = 532.0

[node name="Label" type="Label" parent="GoldButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 11.0
offset_right = 89.0
offset_bottom = 43.0
text = "Buy Gold"

[node name="TextureRect" type="TextureRect" parent="GoldButton"]
layout_mode = 0
offset_left = 71.0
offset_right = 135.0
offset_bottom = 64.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_ow1gs")

[node name="Price" type="Label" parent="GoldButton"]
layout_mode = 0
offset_left = 122.0
offset_right = 173.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 30
text = "50
"
horizontal_alignment = 2

[node name="WoodButton" type="Button" parent="."]
offset_left = 479.0
offset_top = 536.0
offset_right = 665.0
offset_bottom = 588.0

[node name="Label" type="Label" parent="WoodButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 11.0
offset_right = 89.0
offset_bottom = 43.0
text = "Buy Wood"

[node name="TextureRect" type="TextureRect" parent="WoodButton"]
layout_mode = 0
offset_left = 82.0
offset_top = 1.0
offset_right = 146.0
offset_bottom = 65.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("7_bvr5l")

[node name="Price" type="Label" parent="WoodButton"]
layout_mode = 0
offset_left = 121.0
offset_top = 1.0
offset_right = 172.0
offset_bottom = 122.0
theme_override_font_sizes/font_size = 30
text = "50
"
horizontal_alignment = 2

[node name="CLOSE" type="TextureButton" parent="."]
offset_left = 674.0
offset_top = 507.0
offset_right = 874.0
offset_bottom = 579.0
texture_normal = ExtResource("3_td31b")
texture_pressed = ExtResource("4_2dbkq")

[node name="Label" type="Label" parent="CLOSE"]
layout_mode = 0
offset_left = 62.0
offset_top = 3.0
offset_right = 138.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Close"

[connection signal="pressed" from="GoldButton" to="." method="_on_gold_button_pressed"]
[connection signal="pressed" from="WoodButton" to="." method="_on_wood_button_pressed"]
[connection signal="pressed" from="CLOSE" to="." method="_on_close_pressed"]
